# trt_practice

./: .clang-format  .gitignore  CMakeLists.txt  README.md
0_resnet18_onnx/: CMakeLists.txt  load_model.py  prepare_calib_data.py  stats.sql
0_resnet18_onnx/src/: builder.cpp  builder.hpp  calibrator.cpp  calibrator.hpp  infer.cpp  infer.hpp  main.cpp
common/: logger.hpp
resnet18/: CMakeLists.txt
resnet18/src/: builder.cpp  main.cpp
